Switching from NanoHTTPD to HttpServer